changed icon display for staff

--- a/themes/gpsg/scss/master.scss
+++ b/themes/gpsg/scss/master.scss
@@ -3,4 +3,5 @@
 @import "../../../division-project/scss/master";
 
 /* Theme specific styles */
-@import "imports/_theme.scss"
+@import "imports/_theme.scss";
+@import "imports/_staff-coin-list.scss";
